# scylla-cdc-rust

./: fleet.toml  remove_keyspaces.sh
scylla-cdc/: Cargo.toml
scylla-cdc-printer/: Cargo.toml
scylla-cdc-printer/src/: printer.rs
scylla-cdc-replicator/: Cargo.toml
scylla-cdc-replicator/src/: main.rs  replicator.rs  replicator_consumer.rs
scylla-cdc/src/: cdc_types.rs  log_reader.rs  stream_generations.rs  stream_reader.rs
